--- a/tippek.html
+++ b/tippek.html
@@ -24,17 +24,28 @@
     #tipp1 {
         text-align: center;
     }
+
+    #riot {
+        text-align: center;
+    }
+
+    #twitch {
+        display: block;
+        margin: auto;
+    }
 </style>
 
 <body>
     <h1><b>A legjobb dolog amit ezzel a játékkal tehetünk:</b></h1>
-    <h2>MÉG MIELŐTT MEGSZERETJÜK <br> <strong><u>L E T Ö R Ö L J Ü K</u></strong></h2>
+    <h2><a
+            href="https://www.google.com/search?q=how+to+uninstall+league+of+legends&ei=WxuyYcDcMJSU9u8Pjr2YuAg&oq=how+to+unistall+league+of+legends&gs_lcp=Cgdnd3Mtd2l6EAMYADIECAAQDTIECAAQDTIECAAQDTIECAAQDTIECAAQDTIECAAQDTIECAAQDTIGCAAQDRAeMgYIABANEB4yBggAEA0QHjoHCAAQRxCwAzoHCAAQsAMQQzoNCC4QxwEQ0QMQsAMQQzoICAAQ5AIQsAM6CgguEMgDELADEEM6CAgAEAcQHhATOgYIABAHEB46CAgAEAcQChAeSgQIQRgASgQIRhgBUO4KWKUYYOQlaAFwAngAgAGDAYgBvweSAQMzLjaYAQCgAQHIAQ_AAQE&sclient=gws-wiz"><img
+                src="lol7.jpg"></a></h2>
     <h3 id="tipp1"><i><b>Ha úgy gondolja hogy <u>az Ön mentális egészségére</u> nincs hatással a League of Legends kérem
                 görgessen lejjebb</b></i></h3>
     <img src="lol4.png" id="kep">
     <p>A legnagyobb segítség természetesen az lehet, hogyha a játékon belül mindent alaposan elolvasol. Melyik képesség
         mit jelent, mit tudnak a tárgyak és mennyibe kerülnek.</p>
-    <p>Miután rámész a <a href="ne.html"><img src="lol5.jpg" width="60"></a> gombra</p>
+
     <p>A Leage of Legends (mostantól LoL) egy nagyon egyszerű „sakk” alapokon nyugvó játék, amiben te a bábu szerepét
         töltöd be. Egyszerű végcélja van: Pusztítsd el az ellenség „Nexus kristályát”! Ezt a célt tartsd mindig a
         fejedben! (Sajnos sok, akár profi játékos is képes elfelejteni, hogy mi is a játék valódi célja és ezzel
@@ -46,7 +57,8 @@
         akkor is, ha ugyanazon a pályán játszódik ezredszerre is. Emiatt a tulajdonsága miatt lett mára az egyik
         legnépszerűbb e-sport. Nézd a közvetítéseket, ha van időd, mert nagyon izgalmasak tudnak lenni akár az évközi
         meccsek is, és nem utolsó sorban sokat tanulhatsz a profiktól!</p>
-        <a href="https://www.twitch.tv/riotgames"><img src="lol6.png" width="100"></a>
+    <h3 id="riot">A Riot Games Twitch csatornája:</h3>
+    <a href="https://www.twitch.tv/riotgames"><img src="lol6.png" width="100" id="twitch"></a>
 
 
 </body>
